# plot-extraction

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  pyproject.toml  tmp.md
src/plot2spec/: __init__.py  axes.py  calibration.py  claude.py  cli.py  config.py  export.py  ingest.py  models.py  segmentation.py  signal.py  tracing.py  verify.py
tests/: conftest.py  synthetic.py  test_axes.py  test_calibration.py  test_segmentation.py  test_signal.py  test_tracing.py
