[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plot2spec-v2"
version = "0.1.0"
description = "Paper PDF -> figure crops -> spectra data, with a Claude vision perception layer and classical/deterministic extraction math."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pranav Upreti", email = "pranav.upreti@mail.utoronto.ca" }]
dependencies = [
    "anthropic>=0.40",
    "pymupdf>=1.24",
    "numpy>=1.26",
    "scipy>=1.11",
    "opencv-python-headless>=4.9",
    "matplotlib>=3.8",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[project.scripts]
p2s = "plot2spec.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/plot2spec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
